--- a/stock_trader/index.html
+++ b/stock_trader/index.html
@@ -1,65 +1,151 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Currency Trader</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="static/main.css">
+    <title>Currency Trader</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="static/main.css">
 </head>
 <body>
-	<div class="container-fluid">
-		<div class="user-info">
-			<h1>Username</h1>
-			<table class="table table-striped">
-				<tr>
-				    <th>Balance</th>
-				    <th>#######</th>
-				  </tr>
-				  <tr>
-				    <td>Unrealised P/L</td>
-				    <td>##############</td>
-				  </tr>
-				  <tr>
-				    <td>Realised P/L</td>
-				    <td>############</td>
-				  </tr>
-				  <tr>
-				    <td>Trades</td>
-				    <td>######</td>
-				  </tr>
-				  <tr>
-				    <td>Orders</td>
-				    <td>######</td>
-				  </tr>
-				  <tr>
-				    <td>Margin Used</td>
-				    <td>###########</td>
-				  </tr>
-				  <tr>
-				    <td>Margin Available</td>
-				    <td>################</td>
-				  </tr>
-			</table>
-		</div>
-		<div class="pairs">
-			<!-- List of Pairs -->
-			<!-- Red : Offline -->
-			<!-- Orange : Online, but Inelligible -->
-			<!-- Green : Online -->
-		</div>
-		<div class="body">
-			<div class="graph">
-				<!--  -->
+    <div class="container-fluid">
+        <div class="user-info">
+            <h1>Username</h1>
+            <table class="table table-striped">
+                <tr>
+                    <th>Balance</th>
+                    <th>#######</th>
+                </tr>
+                <tr>
+                    <td>Unrealised P/L</td>
+                    <td>##############</td>
+                </tr>
+                <tr>
+                    <td>Realised P/L</td>
+                    <td>############</td>
+                </tr>
+                <tr>
+                    <td>Trades</td>
+                    <td>######</td>
+                </tr>
+                <tr>
+                    <td>Orders</td>
+                    <td>######</td>
+                </tr>
+                <tr>
+                    <td>Margin Used</td>
+                    <td>###########</td>
+                </tr>
+                <tr>
+                    <td>Margin Available</td>
+                    <td>################</td>
+                </tr>
+            </table>
+        </div>
+        <div class="pairs">
+            <!-- List of Pairs -->
+            <!-- Red : Offline -->
+            <!-- Orange : Online, but Inelligible -->
+            <!-- Green : Online -->
+        </div>
+        <div class="body">
+            <div class="graph">
+                <!--  -->
 
-			</div>
-		<div>
-		<div class="footer">
-			<label><input type="checkbox" value="first_checkbox"> Show Errors</label>
-		</div>
-		<div class="error-log">
-			<div class="error"></div>
-		</div>
-	</div>
-	<script src="static/main.js"></script>
-</body>
-</html>
+            </div>
+            <div>
+                <div class="footer">
+                    <label><input id="error-box" type="checkbox"> Show Errors</label>
+                </div>
+                <div class="error-log">
+                    <table class="table table-striped">
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+                        <tr>
+                            <td>Time</td>
+                            <td>Description</td>
+                            <td><button>Comment</button></td>
+                        </tr>
+
+                    </table>
+                </div>
+            </div>
+            <script
+              src="https://code.jquery.com/jquery-3.0.0.min.js"
+              integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="
+              crossorigin="anonymous"></script>
+            <script src="static/main.js"></script>
+        </body>
+        </html>
