--- a/stock_trader/index.html
+++ b/stock_trader/index.html
@@ -64,82 +64,82 @@
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                         <tr>
                             <td>Time</td>
                             <td>Description</td>
-                            <td><button>Comment</button></td>
+                            <td><button class="btn btn-default">Comment</button></td>
                         </tr>
                     </table>
                 </div>
